--- a/views/about.html
+++ b/views/about.html
@@ -37,6 +37,7 @@
             <li class="active"><a href="/about">About</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
+            <li><a href="/posts/add">Add Post</a></li>
             <li><a href="/posts">Posts</a></li>
             <li><a href="/categories">Categories</a></li>            
           </ul>
@@ -55,7 +56,7 @@
           <p>Nullam vulputate lectus at nisi euismod, nec consectetur lorem elementum. Vestibulum id justo metus. Etiam id lacinia nulla. Fusce aliquet convallis mauris iaculis iaculis. Suspendisse et eleifend tortor. Nunc non tincidunt lorem. Integer consectetur magna felis, vel mattis diam varius id. Morbi elementum semper purus, nec ullamcorper neque mattis in. Nulla facilisi. Vivamus mollis justo eget urna bibendum sodales.</p>
           </article>
         </section>
-        <aside class="col-md-3 aboutHead">
+        <aside class="col-md-3 aboutHead" >
           <h2>Coming Soon....</h2>
           <p>Thank You for visting my page👏.</p>
         </aside>
