--- a/views/addPost.html
+++ b/views/addPost.html
@@ -5,21 +5,19 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <!-- Latest compiled and minified Bootstrap 3.4.1 CSS -->
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
       <link rel="stylesheet" href="/main.css">
       <link rel="stylesheet" href="https://bootswatch.com/3/slate/bootstrap.min.css" />
 
       
-      <title>About</title>
+      <title> WEB322 Aaron John Bivera </title>
   </head>
-  <body class="aboutBody">
+  <body class="addBody">
 
 <link rel="stylesheet" href="https://bootswatch.com/3/simplex/bootstrap.min.css" />
 
-    <nav class=" navbar-fixed-top aboutNav">
+    <nav class=" navbar-fixed-top addNav">
       <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
@@ -30,28 +28,27 @@
           <span class="navbar-brand" href="#">WEB322 - Aaron John Bivera</span>
         </div>
     
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"></div>
           <ul class="nav navbar-nav">
             <li><a href="/blog">Blog</a></li>
             <li><a href="/about">About</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/posts/add">Add Post</a></li>
             <li class="active"><a href="/posts/add">Add Post</a></li>
-            <li><a href="/categories">Categories</a></li>            
+            <li><a href="/categories">Categories</a></li>  
+            <li><a href="/posts">Posts</a></li>          
           </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
+        </div>
+      </div>
     </nav>
-    <div class="container" style="padding-top:60px">
+    <div class="container" style="padding-top:80px">
       <div class="row" >
         <div class="col-md-12">
-            <h2>Add Post</h2>
+            <h2>Add Post 📮</h2>
             <br />   
             <form method="post" action="/posts/add" enctype="multipart/form-data">   
                 <fieldset>
-                    <legend>Feature Image</legend>
+                    <legend>Feature Image 📥</legend>
                     <div class="row">
                         <div class="col-md-12">
                             <div class="form-group">
@@ -103,14 +100,16 @@
                               </div>
                             </div>
                         </div>
-        
+                    </div>  
+
+                </fieldset> 
+                
+                <hr/>
+                <input type ="submit" class= "btn btn-primary pull-right" value="Add Post" /><br /><br /><br />
+            </form>    
       </div>
     </div>
-
-    <!-- Latest compiled and minified jQuery 3.6.0 JavaScript -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-
-    <!-- Latest compiled and minified Bootstrap 3.4.1 JavaScript -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
   </body>
 </html>
