--- a/views/addPost.html
+++ b/views/addPost.html
@@ -52,7 +52,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="form-group">
-                                <input class="form-control" id="featureImage" name="featureImage" type="file" />
+                                <input class="form-control" id="featureImage" name="featureImage" type="file" required />
                             </div>
                         </div>
                     </div>
