--- a/views/categories.hbs
+++ b/views/categories.hbs
@@ -3,7 +3,29 @@
           <h2>Categories</h2>
           <hr />
 
-          <p>TODO: render a list of all category id's and categories here</p>
+          <div class="table-responsive">
+        <table class="table ">
+            <thead>
+            <tr>
+                <th>Category ID</th>
+                <th>Category Name</th>
+            </tr>
+            </thead>
+            <tbody>
+            {{#each categories}}
+                <tr>
+                    <td><a href="/posts?category={{id}}">{{id}}</a></td>
+                    <td><a href="/posts?category={{id}}">{{category}}</a></td>
+                </tr>
+            {{/each}}
+            </tbody>
+        </table>
+        </div>
 
     </div>
+    {{#unless categories}}
+    <div class="col-md-12 text-center">
+        <strong>{{message}}</strong>
+    </div>
+    {{/unless}}
 </div>
