--- a/views/addPost.hbs
+++ b/views/addPost.hbs
@@ -57,4 +57,13 @@
                               </div>
                             </div>
                         </div>
-                    </div>  
+                    </div> 
+                </fieldset>
+
+      <hr />
+
+      <input type="submit" class="btn btn-primary pull-right" value="Add Post" /><br /><br /><br />
+
+    </form>
+  </div>
+</div>   
