--- a/views/categories.hbs
+++ b/views/categories.hbs
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="col-md-12">
-          <h2>Categories</h2>
+          <h2>Categories <a href="/categories/add" class="btn btn-success pull-right">Add Category 🔖</a></h2>
           <hr />
 
           <div class="table-responsive">
         <table class="table ">
-            <thead>
+            <thead style="background-color: lightsteelblue ;">
             <tr>
                 <th>Category ID</th>
                 <th>Category Name</th>
@@ -16,6 +16,7 @@
                 <tr>
                     <td><a href="/posts?category={{id}}">{{id}}</a></td>
                     <td><a href="/posts?category={{id}}">{{category}}</a></td>
+                    <td><a class="btn btn-danger" href="/categories/delete/{{id}}">remove</a></td>
                 </tr>
             {{/each}}
             </tbody>
