--- a/views/posts.hbs
+++ b/views/posts.hbs
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="col-md-12">
-        <h2>Posts</h2>
+        <h2>Posts <a href="/posts/add" class="btn btn-success pull-right"> Add Post </a></h2>
         <hr />
 
         <div class="table-responsive">
             <table class="table ">
-                <thead>
+                <thead style="background-color: lightsteelblue;">
                     <tr>
                         <th>Post&nbsp;ID</th>
                         <th>Title</th>
