--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -57,7 +57,7 @@
     
     <div class="footer">
       <div class="content">
-          <img src="venomhead.png" alt="venom" >
+          <img src="./../venomhead.png" alt="venom" >
               <div class="footerH">2022 © All rights reserved. <br> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;@Aaron⚡️</div>
       </div>
   </div>
