--- a/views/categories.hbs
+++ b/views/categories.hbs
@@ -4,8 +4,8 @@
           <hr />
 
           <div class="table-responsive">
-        <table class="table ">
-            <thead style="background-color: lightsteelblue ;">
+        <table class="table" style="background-color: lightsteelblue ;">
+            <thead>
             <tr>
                 <th>Category ID</th>
                 <th>Category Name</th>
