--- a/views/posts.hbs
+++ b/views/posts.hbs
@@ -2,10 +2,11 @@
     <div class="col-md-12">
         <h2>Posts <a href="/posts/add" class="btn btn-success pull-right"> Add Post </a></h2>
         <hr />
+        
 
         <div class="table-responsive">
-            <table class="table ">
-                <thead style="background-color: lightsteelblue;">
+            <table class="table" style="background-color: lightsteelblue;">
+                <thead >
                     <tr>
                         <th>Post&nbsp;ID</th>
                         <th>Title</th>
@@ -17,12 +18,18 @@
                 <tbody>
                     {{#each posts}}
                     <tr>
-                        <td>{{id}}</td>
-                        <td>{{title}}</td>
-                        <td>{{postDate}}</td>
-                        <td><a href="/posts?category={{category}}">{{category}}</a></td>
-                        <td>{{published}}</td>
-                    </tr>
+                        <td>{{this.id}}</td>
+                        <td>{{this.title}}</td>
+                        <td>{{#formatDate this.postDate}}{{/formatDate}}</td>
+                        <td><a
+                        href="/posts?category={{this.category}}"
+                        >{{this.category}}</a></td>
+                        <td>{{this.published}}</td>
+                        <td><a
+                        href="/posts/delete/{{this.id}}"
+                        class="btn btn-danger"
+                        >Remove</a></td>
+                    </tr>    
                     {{/each}}
                 </tbody>
             </table>
