--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -3,7 +3,7 @@
         {{#if data.post}}
             <article>
                 <h2>{{data.post.title}}</h2>
-                <img src={{data.post.featureImage}} height="320" width="847">
+                <img src={{data.post.featureImage}} width="100%">
                 <br /><br />
                 {{#safeHTML data.post.body}}{{/safeHTML}}
                 <br /><br />
