--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -29,19 +29,40 @@
             <span class="icon-bar"></span>
           </button>
           <span class="navbar-brand" href="#">WEB322 - Aaron John Bivera</span>
-        </div>
+      </div>
     
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li><a href="/blog">Blog</a></li>
-            <li class="active"><a href="/about">About</a></li>
-          </ul>
+            <ul class="nav navbar-nav">
+              {{#navLink "/blog"}}Blog{{/navLink}}
+              {{#navLink "/about"}}About{{/navLink}}
+            </ul>
+            {{#if session.user}}
+          <form class="navbar-form navbar-right">
+            <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle" type="button" id="userMenu" data-toggle="dropdown">
+              <span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;{{session.user.userName}}&nbsp;&nbsp;<span
+                class="caret"></span>
+            </button>
+              <ul class="dropdown-menu" aria-labelledby="userMenu">
+                <li><a href="/userHistory">User History</a></li>
+                <li><a href="/logout">Log Out</a></li>
+              </ul>
+            </div>
+          </form>
+     
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/posts/add">Add Post</a></li>
-            <li><a href="/posts">Posts</a></li>
-            <li><a href="/categories">Categories</a></li>            
-          </ul>
+              {{!-- <li><a href="/posts/add">Add Post</a></li> --}}
+              {{#navLink "/posts"}}Posts{{/navLink}}
+              {{#navLink "/categories"}}Categories{{/navLink}}
+          </ul> 
+
+          {{else}}
+          <form class="navbar-form navbar-right">
+            <a href="/register" class="btn btn-success"><span class="glyphicon glyphicon-cog"></span>&nbsp;&nbsp;Register</a>
+            <a href="/login" class="btn btn-primary"><span class="glyphicon glyphicon-chevron-right"></span>&nbsp;&nbsp;Log In</a>
+          </form>
+          {{/if}}
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
